# ChangeLog for games-board/six
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/six/ChangeLog,v 1.5 2004/06/24 22:21:19 agriffis Exp $

  30 Mar 2004; David Holm <dholm@gentoo.org> six-0.5.1.ebuild:
  Added to ~ppc.

*six-0.5.1 (29 Mar 2004)

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> six-0.5.1.ebuild:
  version bump

*six-0.5.0 (01 Mar 2004)

  01 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> six-0.5.0.ebuild:
  version bump

*six-0.4.0 (28 Nov 2003)

  28 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml,
  six-0.4.0.ebuild:
  initial commit
