@@ -1,8 +1,10 @@
-MD5 79ad4d2fb1d0a18f953c7d2ca9115845 six-0.5.1.ebuild 422
 MD5 87fadfd0c8446719a47cf7405a7e5798 six-0.4.0.ebuild 417
-MD5 d11ca3b6e49b0f7fee675b5eec30e555 six-0.5.0.ebuild 417
-MD5 b96679c927932aeec222d43e6b5d0008 ChangeLog 649
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+MD5 d11ca3b6e49b0f7fee675b5eec30e555 six-0.5.0.ebuild 417
+MD5 5e3a5e0b3293afdb4186aac65d5a50e0 ChangeLog 766
+MD5 79ad4d2fb1d0a18f953c7d2ca9115845 six-0.5.1.ebuild 422
+MD5 c6e47e7c983063be63063979829e3da2 six-0.5.2.ebuild 423
 MD5 93a1951ff5df8bac26b89b041cece715 files/digest-six-0.4.0 61
 MD5 e178cd1604bf925028235f46532ab7e6 files/digest-six-0.5.0 61
 MD5 65627cb13560bc1283b6a5bb71daf810 files/digest-six-0.5.1 61
+MD5 4f7b868d920c9419475cb8e3208b9cd4 files/digest-six-0.5.2 61
