@@ -1,0 +1,1 @@
+MD5 129da56864fc2ca8c8c949dcc2239604 six-0.5.2.tar.gz 927829
