@@ -1,0 +1,15 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/six/six-0.5.2.ebuild,v 1.1 2004/08/04 18:40:54 mr_bones_ Exp $
+
+inherit kde
+need-kde 3
+
+DESCRIPTION="A Hex playing program for KDE"
+HOMEPAGE="http://six.retes.hu/"
+SRC_URI="http://six.retes.hu/download/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="x86 ~ppc"
+IUSE=""
