@@ -1,6 +1,11 @@
 # ChangeLog for games-board/six
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/six/ChangeLog,v 1.5 2004/06/24 22:21:19 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/six/ChangeLog,v 1.6 2004/08/04 18:40:54 mr_bones_ Exp $
+
+*six-0.5.2 (04 Aug 2004)
+
+  04 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> +six-0.5.2.ebuild:
+  version bump
 
   30 Mar 2004; David Holm <dholm@gentoo.org> six-0.5.1.ebuild:
   Added to ~ppc.
